# serde-construct-classic

./: .editorconfig  Cargo.toml  LICENSE  README.md
src/: cli.rs  constants.rs  de.rs  error.rs  lib.rs  ser.rs
tests/: test.rs
